--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 </head>
 
 <body>
-    <section>
+    <nav class="navbar">
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#recipie">My recipies</a></li>
+            <li><a href="#subscriber">Subscribers</a></li>
+            <li><a href="#footer">Footers</a></li>
+        </ul>
+    </nav>
+    <section id="home">
         <div class="container">
             <div class="half-width">
                 <h1 class="main-text"><span class="orange">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food
@@ -24,7 +33,7 @@
         </div>
     </section>
 
-    <section>
+    <section id="about">
         <div class="bg">
             <div class="container">
                 <div class="half-width ">
@@ -41,7 +50,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="recipie">
         <div class="card-section">
             <div class="recip-text">
                 <h1>My recipies</h1>
@@ -77,7 +86,7 @@
             </div>
         </div>
     </section>
-    <section>
+    <section id="subscriber">
         <div class="container">
             <div class="subscriber">
                 <div class="third-width fixed">
@@ -96,7 +105,7 @@
         </div>
     </section>
 
-    <footer>
+    <footer id="footer">
         <div class="footer-text">
             <h2> <span class="orange">FOOD</span> NETWORK</h2>
             <p>Eat healthy to live healthy. Live healthy to live happy
