--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#recipie">My recipies</a></li>
             <li><a href="#subscriber">Subscribers</a></li>
+            <li><a href="#join">Join Now</a></li>
             <li><a href="#footer">Footers</a></li>
         </ul>
     </nav>
@@ -43,8 +44,7 @@
                 </div>
                 <div class="half-width ">
                     <h1 class="main-text"> About Me</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum, dolorem cupiditate? Ipsam
-                        obcaecati sapiente quae! Ullam, quo sunt. Ullam at aliquam natus eum!</p>
+                    <p> <b>The Head Chef </b>It all started in my mom’s very own kitchen where I started experimenting with spices and flavours. This took me to pursue to Cooked Healthy Food</p>
                     <a class="btn-link" href="#">Contact me</a>
                 </div>
             </div>
@@ -52,35 +52,31 @@
     </section>
     <section id="recipie">
         <div class="card-section">
-            <div class="recip-text">
+            <div class="text-content">
                 <h1>My recipies</h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus magnam illo in eveniet animi,
-                    <br> voluptates delectus error explicabo excepturi. Totam!
+                <p>Eating healthy food fills your body with energy and nutrients. <br>Imagine your cells smiling back at you and saying: Thank you!
                 </p>
             </div>
             <div class="cards">
                 <div class="third-width">
                     <div class="card">
                         <img src="images/foods/Project Cover.jpg" alt="">
-                        <h2>Recipie Title</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit corrupti perferendis
-                            inventore libero accusantium a doloribus officiis</p>
+                        <h2>Beef curry</h2>
+                        <p>Make our easy beef curry and serve with a hunk of naan bread to mop up the delicious juices. If you prefer it less spicy, simply add less chilli powder</p>
                     </div>
                 </div>
                 <div class="third-width">
                     <div class="card">
                         <img src="images/foods/Project Cover.png" alt="">
-                        <h2>Recipie Title</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit corrupti perferendis
-                            inventore libero accusantium a doloribus officiis</p>
+                        <h2>Butternut Squash</h2>
+                        <p>My perfect autumn/winter Sunday evening meal involves a warming pot of this Butternut Squash, Chilli and Coconut Milk Soup bubbling on the stove and fresh Pumpkin .</p>
                     </div>
                 </div>
                 <div class="third-width">
                     <div class="card">
                         <img src="images/foods/Project Cover1.jpg" alt="">
-                        <h2>Recipie Title</h2>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit corrupti perferendis
-                            inventore libero accusantium a doloribus officiis</p>
+                        <h2>Meat steak</h2>
+                        <p>This is just an excellent beef steak marinade that adds juiciness and flavour into steaks, transforming economical steaks from just ok to “wow!”.</p>
                     </div>
                 </div>
             </div>
@@ -103,6 +99,22 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id="join">
+        <div class="bg2">
+            <div class="container">
+                <div class="half-width ">
+                    <h1 class="fixed-customar"> Join Our Happy Customar</h1>
+                    <p>You don't need a diet because we provide</p>
+                    <a class="btn-link2" href="#">Join Now</a>
+                </div>
+                <div class="half-width">
+                    <img src="images/female/ing2.png" alt="model">
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <footer id="footer">
