--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <h1 class="main-text"><span class="orange">Skip</span> The Diet,<br> Just Eat Healthy <br> With Food
                     Network</h1>
                 <p>Imagine you don't need a diet because we provide <br> healthy and delicious food for you!</p>
-                <a class="btn-link" href="#">Order Food</a>
+                <a class="btn-link" href="https://github.com/As-Shovo" target="_blank">Order Food</a>
             </div>
             <div class="half-width">
                 <img src="images/female/Group 8425.png" alt="model">
@@ -45,7 +45,7 @@
                 <div class="half-width ">
                     <h1 class="main-text"> About Me</h1>
                     <p> <b>The Head Chef </b>It all started in my mom’s very own kitchen where I started experimenting with spices and flavours. This took me to pursue to Cooked Healthy Food</p>
-                    <a class="btn-link" href="#">Contact me</a>
+                    <a class="btn-link" href="https://www.linkedin.com/in/akbar-shovo-225154177/" target="_blank">Contact me</a>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
                 <div class="half-width ">
                     <h1 class="fixed-customar"> Join Our Happy Customar</h1>
                     <p>You don't need a diet because we provide</p>
-                    <a class="btn-link2" href="#">Join Now</a>
+                    <a class="btn-link2" href="https://www.linkedin.com/in/akbar-shovo-225154177/" target="_blank">Join Now</a>
                 </div>
                 <div class="half-width">
                     <img src="images/female/ing2.png" alt="model">
